Changed NS_MsgStripRE, decode MIME encoded header before parsing for "Re:", and encode the data back after "Re:" is stipped, bug 21267, r=bienvenu, sr=sspitzer, a=asa.